--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
     <style>
-        body {
-            padding: 5px;
-        }
-
         .placeholder {
             margin: 5px;
             padding: 0 10px;
@@ -51,33 +47,55 @@
         <div class="weui-flex">
             <div class="weui-flex__item">
                 <div class="placeholder">报名记录({{activity.joinNumber}}人)
-                    <div class="weui-cells">
-                        <div v-for="order in activity.order_list" class="weui-cell">
-                            <div class="weui-cell__hd">
-                                <img :src=order.avatar class="avatar">
-                            </div>
-                            <div class="weui-cell__bd">
-                                {{order.userName}}<br>{{order.phone}}
-                            </div>
-                            <div class="weui-cell__ft">
-                                <div v-if="order.status === 3">已核销</div>
-                                <div v-if="order.status === 2" style="color:green">已支付</div>
-                                <div v-if="order.status === 1" style="color:rebeccapurple">待支付</div>
-                                <!-- <br> {{order.createTime}} -->
+                    <div v-infinite-scroll="loadMore" infinite-scroll-disabled="busy" infinite-scroll-distance="2">
+                        <div class="weui-cells">
+                            <div v-for="order in activity.join_user" class="weui-cell">
+                                <div class="weui-cell__hd">
+                                    <img :src=order.avatar class="avatar">
+                                </div>
+                                <div class="weui-cell__bd">
+                                    {{order.userName}}<br>{{order.phone}}
+                                </div>
+                                <div class="weui-cell__ft">
+                                    <div v-if="order.status === 3">已核销</div>
+                                    <div v-if="order.status === 2" style="color:green">已支付</div>
+                                    <div v-if="order.status === 1" style="color:rebeccapurple">待支付</div>
+                                    <!-- <br> {{order.createTime}} -->
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="weui-flex">
             <div class="weui-flex__item">
-                <div class="placeholder" style="text-align: center;">活动佣金排行榜</div>
+                <div class="placeholder" style="text-align: center;">活动佣金排行榜
+                    <div v-infinite-scroll="loadMore" infinite-scroll-disabled="busy" infinite-scroll-distance="2">
+                        <div class="weui-cells">
+                            <div v-for="reward in activity.reward_list" class="weui-cell">
+                                <div class="weui-cell__hd">
+                                    {{reward.userName}}
+                                </div>
+                                <div class="weui-cell__bd"></div>
+                                <div class="weui-cell__ft">
+                                    佣金<span style="color:red">￥{{reward.rewardAmount}}</span>元
+
+                                    <!-- <br> {{order.createTime}} -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <img :src="activity.goodsDetail" width="100%" />
-        <div class="weui-footer" style="overflow:hidden; position: fixed;bottom: 0;width: 100%;">
-            <a href="javascript:;" class="open-popup" data-target="#formAdd">点击购买</a>
+        <div style="overflow:hidden; position: fixed;bottom: 0;width: 100%;z-index: 10;text-align: center">
+            <a href="javascript:;" style="background:tomato;width: 49%;height: 30px;line-height:30px;display: inline-block;" class="open-popup"
+                data-target="#formAdd">点击购买</a>
+            <a href="javascript:;" style="background:rgba(20, 180, 68, 0.877);width: 49%;height: 30px;line-height:30px;display: inline-block;"
+                class="open-popup" data-target="#formAdd">分享赚赏金</a>
         </div>
 
         <div id="formAdd" class="weui-popup__container popup-bottom">
@@ -87,75 +105,112 @@
                     <div class="weui-cell">
                         <div class="weui-cell__hd"><label class="weui-label">姓名</label></div>
                         <div class="weui-cell__bd">
-                            <input class="weui-input" type="text" name="userName" placeholder="请输入姓名">
+                            <input class="weui-input" type="text" id="userName" name="userName" placeholder="请输入姓名">
                         </div>
                     </div>
                     <div class="weui-cell">
                         <div class="weui-cell__hd"><label class="weui-label">手机号</label></div>
                         <div class="weui-cell__bd">
-                            <input class="weui-input" type="text" name="userName" placeholder="请输入手机号">
+                            <input class="weui-input" type="text" id="userPhone" name="userPhone" placeholder="请输入手机号">
                         </div>
                     </div>
-                    <a href="javascript:;" class="weui-btn weui-btn_primary">确认提交</a>
+                    <a href="javascript:;" onclick="createOrder()" class="weui-btn weui-btn_primary">确认提交</a>
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script> -->
+<script src="https://cdn.css.net/libs/vue/2.0.3/vue.js"></script>
+<script src="./js/vue-infinite-scroll.js"></script>
+<script src="https://cdn.bootcss.com/axios/0.19.0-beta.1/axios.min.js"></script>
+
 <script>
+    var remote_url = "http://192.168.137.1:8080";
     window.onload = function () {
+        var pid = getQueryString('pid');
+        var goodsId = getQueryString('i');
         var vm = new Vue({
             el: '#app',
             data: {
                 activity: {
-                    scanNumber: 1230,
-                    joinNumber: 981,
-                    goodsImage: 'http://ppqnam2qx.bkt.clouddn.com/FgsGqGxKQPlX_skThoGIN4pfBo57',
-                    goodsDetail: 'http://ppqnam2qx.bkt.clouddn.com/FgsGqGxKQPlX_skThoGIN4pfBo57',
-                    activityMusic: 'http://ppqnam2qx.bkt.clouddn.com/FgsGqGxKQPlX_skThoGIN4pfBo57',
-                    endTime: "2019-05-01",
-                    join_user: [
-                        { name: '张欢', avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
-                        { name: '李四', avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
-                        { name: 'Runoob1', avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' }
+                    scanNumber: 0,
+                    joinNumber: 0,
+                    goodsImage: '',
+                    goodsDetail: '',
+                    activityMusic: '',
+                    endTime: "",
+                    scan_user: [
+                        // { nickName: '张欢', avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
+                        // { nickName: '李四', avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
+                        // { nickName: 'Runoob1', avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' }
                     ],
-                    order_list: [
-                        { userName: '张欢', phone: '13524002701', createTime: '2019-05-01 10:00:00', status: 1, avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
-                        { userName: '张欢', phone: '13524002701', createTime: '2019-05-01 10:00:00', status: 2, avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
-                        { userName: '张欢', phone: '13524002701', createTime: '2019-05-01 10:00:00', status: 3, avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
+                    join_user: [
+                        //{ userName: '张欢', phone: '13524002701', createTime: '2019-05-01 10:00:00', status: 1, avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
+                        //{ userName: '张欢', phone: '13524002701', createTime: '2019-05-01 10:00:00', status: 2, avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
+                        //{ userName: '张欢', phone: '13524002701', createTime: '2019-05-01 10:00:00', status: 3, avatar: 'http://ppqnam2qx.bkt.clouddn.com/FvG41YMFLOr5OffW_h8IepTFk173' },
                     ],
                     reward_list: [
-                        { userName: '张欢', childNum: 1, rewardAmount: 40 },
-                        { userName: '张欢', childNum: 2, rewardAmount: 80 },
-                        { userName: '张欢', childNum: 4, rewardAmount: 160 },
+                        // { userName: '张欢', childNum: 1, rewardAmount: 40 },
+                        // { userName: '张欢', childNum: 2, rewardAmount: 80 },
+                        // { userName: '张欢', childNum: 4, rewardAmount: 160 }
                     ]
-                }
+                },
 
             },
             created() {
-                var endDate = this.activity.endTime.split("-");
-                setInterval("Timer(" + endDate[0] + "," + endDate[1] + "," + endDate[2] + ",00,00,00)", 1000);
-                this.getActivity("2");
+                this.getActivityGoods(goodsId);
             },
             methods: {
-                getActivity: function (data) {
-                    // //发送get请求
-                    // this.$http.get('/h5/activity/'+data).then(function (res) {
-                    //     console.log(res.body);
-                    //     this.activity = res.body;
-                    // }, function () {
-                    //     console.log('请求失败处理');
-                    // });
+                //获取活动数据
+                getActivityGoods: function (goodsId) {
+                    var temp = this;
+                    //发送get请求
+                    axios.get(remote_url + '/h5/activity/goods/' + goodsId)
+                        .then(function (response) {
+                            temp.activity = Object.assign({}, response.data.data);
+                            console.log(temp.activity);
+                            var endDate = temp.activity.endTime.split("-");
+                            setInterval("Timer(" + endDate[0] + "," + endDate[1] + "," + endDate[2] + ",00,00,00)", 1000);
+                        })
+                        .catch(function (error) {
+                            console.log(error);
+                        });
+                },
+                loadMore: function () {
+                    this.busy = true;
+                    setTimeout(() => {
+                        this.page++;
+                        // getOrderLists;
+                        this.busy = false;
+                    }, 1000);
                 }
+
             }
 
         });
-
-
-
+    }
+    //获取订单列表
+    function createOrder() {
+        var order = {
+            "goodsId":2,
+            "phone":$("#userPhone").val(),
+            "userId":2,
+            "userName":$("#userName").val(),
+            "openid":1231231,
+            "pUserId":3,
+        }
+        console.log(order);
+        axios.post(remote_url + '/h5/activity/order/add',order)
+            .then(function (response) {
+                console.log(response.data);
+            })
+            .catch(function (error) {
+                console.log(error);
+            });
     }
 
+    //倒计时
     function Timer(year, month, day, hour, minute, second) {
 
         var leftTime = (new Date(year, month - 1, day, hour, minute, second)) - (new Date()); //计算剩余的毫秒数 
@@ -170,7 +225,7 @@
 
         if (isNaN(days)) { }
         else {
-            document.getElementById("timer").innerHTML = '<span style="color:firebrick">' + days + '</span> ' + "天 " + '<span style="color:firebrick">' + hours + '</span> ' + "小时 " + '<span style="color:firebrick">' + minutes + '</span> ' + "分 " + '<span style="color:firebrick">' + seconds + '</span> ' + "秒";
+            document.getElementById("timer").innerHTML = "<h3>" + '<span style="color:red">' + days + '</span> ' + "天 " + '<span style="color:red">' + hours + '</span> ' + "小时 " + '<span style="color:red">' + minutes + '</span> ' + "分 " + '<span style="color:red">' + seconds + '</span> ' + "秒" + "</h3>";
         }
 
     }
@@ -180,6 +235,19 @@
         }
         return i;
     }
+
+    /**
+        * 获取url参数
+        * @param name
+        * @returns {null}
+        * @constructor
+        */
+    function getQueryString(name) {
+        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+        var r = window.location.search.substr(1).match(reg);
+        if (r != null) return unescape(r[2]);
+        return null;
+    };
 </script>
 <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery-weui/1.2.1/js/jquery-weui.min.js"></script>
