--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body ontouchstart>
-    <div id="app" :style="`background:url(${activity.goodsImage})`">
+    <div id="app" :style="`background:url(${activity.backgroundImage})`">
         <img :src="activity.goodsImage" width="100%" />
         <div class="weui-flex">
             <div class="weui-flex__item">
@@ -143,6 +143,7 @@
                     isEnd:false,
                     goodsImage: '',
                     goodsDetail: '',
+                    backgroundImage: '',
                     activityMusic: '',
                     endTime: "",
                     scan_user: [
